<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    android:gravity="center_horizontal"
    tools:context=".CheckEmailActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="236dp"
        android:layout_height="236dp"
        android:layout_marginTop="35dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/icon_ilustration_check"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/title_check_your_email"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/montserrat_regular"
        android:gravity="center"
        android:text="@string/we_have_sent_a_password_recovery_instruction_to_your_email"
        android:textColor="@color/colorGray"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="MissingConstraints" />

    <com.chinodev.androidneomorphframelayout.NeomorphFrameLayout
        android:id="@+id/layout_btn_oke"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:neomorph_background_color="@color/light"
        app:neomorph_corner_radius="25dp"
        app:neomorph_elevation="6dp"
        app:neomorph_highlight_color="@color/neomorph_highlight_color"
        app:neomorph_shadow_color="@color/neomorph_shadow_color"
        app:neomorph_shadow_type="outer"
        app:neomorph_view_type="rectangular"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/btn_oke"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@drawable/bg_button_circle_green"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/montserrat_regular"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/btn_oke"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </com.chinodev.androidneomorphframelayout.NeomorphFrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>