<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context=".Fragment.ProfileFragment">

    <developer.shivam.crescento.CrescentoContainer
        android:id="@+id/crescentoContainer"
        android:layout_width="0dp"
        android:layout_height="280dp"
        android:elevation="16dp"
        android:scaleType="fitCenter"
        app:curvature="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary">

            <com.dd.ShadowLayout
                android:id="@+id/shadowLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintDimensionRatio="H,1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:sl_cornerRadius="100dp"
                app:sl_dx="0dp"
                app:sl_dy="0dp"
                app:sl_shadowColor="#2D000000"
                app:sl_shadowRadius="12dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_foto_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/foto_profile"
                    app:layout_constraintDimensionRatio="H,1:1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </com.dd.ShadowLayout>

            <TextView
                android:id="@+id/tv_set_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/lato_bold"
                android:text="@string/username_set_profile"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintDimensionRatio="H,1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shadowLayout" />

            <TextView
                android:id="@+id/tv_set_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_regular"
                android:text="@string/email_set_profile"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintDimensionRatio="H,1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_set_username" />

            <com.dd.ShadowLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_set_email"
                app:sl_cornerRadius="16dp"
                app:sl_dx="0dp"
                app:sl_dy="0dp"
                app:sl_shadowColor="#2D000000"
                app:sl_shadowRadius="12dp">

                <Button
                    android:id="@+id/btn_edit_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:background="@drawable/bg_button_rounded_white"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="@font/lato_bold"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:text="@string/btn_edit_profile"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </com.dd.ShadowLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </developer.shivam.crescento.CrescentoContainer>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_menu"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/crescentoContainer">

        <com.chinodev.androidneomorphframelayout.NeomorphFrameLayout
            android:id="@+id/neomorph_setting"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintDimensionRatio="2:0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:neomorph_background_color="@color/neomorph_background_color"
            app:neomorph_corner_radius="10dp"
            app:neomorph_elevation="6dp"
            app:neomorph_highlight_color="@color/neomorph_highlight_color"
            app:neomorph_layer_type="software"
            app:neomorph_shadow_color="@color/neomorph_shadow_color"
            app:neomorph_shadow_type="outer"
            app:neomorph_view_type="rectangular">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/setting_menu"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/container_layout_rounded"
                android:baselineAligned="false">

                <ImageView
                    android:id="@+id/ic_setting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_settings"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/tv_setting_menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_black"
                    android:text="@string/setting_menu"
                    android:textColor="@color/colorGray"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/ic_right_button"
                    app:layout_constraintHorizontal_bias="0.084"
                    app:layout_constraintStart_toEndOf="@+id/ic_setting"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="MissingConstraints" />

                <ImageView
                    android:id="@+id/ic_right_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_right_button"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="MissingConstraints" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.chinodev.androidneomorphframelayout.NeomorphFrameLayout>

        <com.chinodev.androidneomorphframelayout.NeomorphFrameLayout
            android:id="@+id/neomorph_help"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintDimensionRatio="2:0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/neomorph_setting"
            app:neomorph_background_color="@color/neomorph_background_color"
            app:neomorph_corner_radius="10dp"
            app:neomorph_elevation="6dp"
            app:neomorph_highlight_color="@color/neomorph_highlight_color"
            app:neomorph_layer_type="software"
            app:neomorph_shadow_color="@color/neomorph_shadow_color"
            app:neomorph_shadow_type="outer"
            app:neomorph_view_type="rectangular">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/help_menu"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/container_layout_rounded"
                android:baselineAligned="false">

                <ImageView
                    android:id="@+id/ic_help"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_help"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/tv_help_menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_black"
                    android:text="@string/help_menu"
                    android:textColor="@color/colorGray"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/ic_right_button2"
                    app:layout_constraintHorizontal_bias="0.082"
                    app:layout_constraintStart_toEndOf="@+id/ic_help"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="MissingConstraints" />

                <ImageView
                    android:id="@+id/ic_right_button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_right_button"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="MissingConstraints" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.chinodev.androidneomorphframelayout.NeomorphFrameLayout>

        <com.chinodev.androidneomorphframelayout.NeomorphFrameLayout
            android:id="@+id/neomorph_privacy"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintDimensionRatio="2:0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/neomorph_help"
            app:neomorph_background_color="@color/neomorph_background_color"
            app:neomorph_corner_radius="10dp"
            app:neomorph_elevation="6dp"
            app:neomorph_highlight_color="@color/neomorph_highlight_color"
            app:neomorph_layer_type="software"
            app:neomorph_shadow_color="@color/neomorph_shadow_color"
            app:neomorph_shadow_type="outer"
            app:neomorph_view_type="rectangular">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/privacy_menu"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/container_layout_rounded"
                android:baselineAligned="false">

                <ImageView
                    android:id="@+id/ic_privacy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_privacy_policy"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/tv_privacy_menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_black"
                    android:text="@string/privacy_policy_menu"
                    android:textColor="@color/colorGray"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/ic_right_button3"
                    app:layout_constraintHorizontal_bias="0.082"
                    app:layout_constraintStart_toEndOf="@+id/ic_privacy"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="MissingConstraints" />

                <ImageView
                    android:id="@+id/ic_right_button3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_right_button"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="MissingConstraints" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.chinodev.androidneomorphframelayout.NeomorphFrameLayout>

        <com.chinodev.androidneomorphframelayout.NeomorphFrameLayout
            android:id="@+id/neomorph_sign_out"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintDimensionRatio="2:0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/neomorph_privacy"
            app:neomorph_background_color="@color/neomorph_background_color"
            app:neomorph_corner_radius="10dp"
            app:neomorph_elevation="6dp"
            app:neomorph_highlight_color="@color/neomorph_highlight_color"
            app:neomorph_layer_type="software"
            app:neomorph_shadow_color="@color/neomorph_shadow_color"
            app:neomorph_shadow_type="outer"
            app:neomorph_view_type="rectangular">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/sign_out_menu"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/container_layout_rounded"
                android:baselineAligned="false">

                <ImageView
                    android:id="@+id/ic_sign_out"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_sign_out"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/tv_sign_out_menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_black"
                    android:text="@string/sign_out_menu"
                    android:textColor="@color/colorGray"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/ic_right_button4"
                    app:layout_constraintHorizontal_bias="0.082"
                    app:layout_constraintStart_toEndOf="@+id/ic_sign_out"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="MissingConstraints" />

                <ImageView
                    android:id="@+id/ic_right_button4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_right_button"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="MissingConstraints" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.chinodev.androidneomorphframelayout.NeomorphFrameLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>